0030221: Data Exchange - VRML is exported with inversed normals

Added test case bugs/xde/bug30221